Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118553

Incorrect composition when place a software-rendered widget over a OpenGL-based widget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.4, 6.6.1, 6.7.0 FF
    • 6.4, 6.5, 6.6
    • GUI: OpenGL
    • None
    • macOS
    • aa4fe3286 (dev), aecd210c7 (6.6), c147be792 (tqtc/lts-6.5)

    Description

      When put a semi-transparent software-rendered widget on top of a OpenGL-based widget, e.g. QOpenGLWidget, the final composition seems wrong.

       

      Qt 6.3.1 Qt 6.4/6.5/6.6

       

      Tested on macOS 13.6.1 with Qt 6.6.0. 

      The minimal code sample is provided below.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            qihao Qihao Cheng
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes